fix sidebar scroll on mobile

--- a/mcww_web/sidebar.css
+++ b/mcww_web/sidebar.css
@@ -37,7 +37,8 @@ body.dark {
     padding-right: 0;
     margin-left: auto;
     margin-right: auto;
-    overflow: visible;
+    overflow: scroll;
+    padding-bottom: 90px;
 }
 
 .sidebar-content .mcww-logo svg{
